--- a/thesis/content/bibliography.bib
+++ b/thesis/content/bibliography.bib
@@ -355,3 +355,59 @@
   year={1983},
   publisher={American Association for the Advancement of Science}
 }
+@inproceedings{puri2005stresscam,
+  title={StressCam: non-contact measurement of users' emotional states through thermal imaging},
+  author={Puri, Colin and Olson, Leslie and Pavlidis, Ioannis and Levine, James and Starren, Justin},
+  booktitle={CHI'05 extended abstracts on Human factors in computing systems},
+  pages={1725--1728},
+  year={2005},
+  organization={ACM}
+}
+@book{seiger2002essentials,
+  title={Essentials of Anatomy \& Physiology},
+  author={Seiger, Charles M},
+  year={2002},
+  publisher={Prentice Hall}
+}
+@book{carlson2013physiology,
+  title={Physiology of behavior},
+  author={Carlson, Neil R},
+  year={2013},
+  publisher={Pearson}
+}
+@article{pflanzer2013galvanic,
+  title={Galvanic Skin Response and the Polygraph},
+  author={Pflanzer, Richard},
+  journal={BIOPAC Systems, Inc},
+  year={2013}
+}
+@article{isen2007some,
+  title={Some measurement issues in the study of affect},
+  author={Isen, Alice M and Erez, Amir},
+  journal={Oxford handbook of methods in positive psychology},
+  pages={250--265},
+  year={2007},
+  publisher={Oxford University Press New York, NY}
+}
+@article{rigby2007pens,
+  title={The Player Experience of Need Satisfaction (PENS)},
+  author={Rigby, Scott and Ryan, Richard},
+  year={2007},
+  publisher={Immersive, Inc.}
+}
+@article{bradley1994measuring,
+  title={Measuring emotion: the self-assessment manikin and the semantic differential},
+  author={Bradley, Margaret M and Lang, Peter J},
+  journal={Journal of behavior therapy and experimental psychiatry},
+  volume={25},
+  number={1},
+  pages={49--59},
+  year={1994},
+  publisher={Elsevier}
+}
+@article{lang1985cognitive,
+  title={The cognitive psychophysiology of emotion: Fear and anxiety.},
+  author={Lang, Peter J},
+  year={1985},
+  publisher={Lawrence Erlbaum Associates, Inc}
+}
