working previous works

--- a/thesis/content/common.tex
+++ b/thesis/content/common.tex
@@ -9,8 +9,7 @@
 
 \newcommand{\img}[4]{
 \begin{figure}[h!]
-  \caption[#1]
-  {#2}
+  \caption[#1]{#2}
   \centering
   \includegraphics[width=0.5\textwidth]{images/#3}
   \label{fig:#4}
