working on lit review

--- a/thesis/content/bibliography.bib
+++ b/thesis/content/bibliography.bib
@@ -401,3 +401,110 @@
   year={1985},
   publisher={Lawrence Erlbaum Associates, Inc}
 }
+@article{brockmyer2009development,
+  title={The development of the Game Engagement Questionnaire: A measure of engagement in video game-playing},
+  author={Brockmyer, Jeanne H and Fox, Christine M and Curtiss, Kathleen A and McBroom, Evan and Burkhart, Kimberly M and Pidruzny, Jacquelyn N},
+  journal={Journal of Experimental Social Psychology},
+  volume={45},
+  number={4},
+  pages={624--634},
+  year={2009},
+  publisher={Elsevier}
+}
+@article{ryan1983relation,
+  title={Relation of reward contingency and interpersonal context to intrinsic motivation: A review and test using cognitive evaluation theory.},
+  author={Ryan, Richard M and Mims, Valerie and Koestner, Richard},
+  journal={Journal of Personality and Social Psychology},
+  volume={45},
+  number={4},
+  pages={736},
+  year={1983},
+  publisher={American Psychological Association}
+}
+@article{russell1977evidence,
+  title={Evidence for a three-factor theory of emotions},
+  author={Russell, James A and Mehrabian, Albert},
+  journal={Journal of research in Personality},
+  volume={11},
+  number={3},
+  pages={273--294},
+  year={1977},
+  publisher={Elsevier}
+}
+@article{morris1995observations,
+  title={Observations: SAM: the Self-Assessment Manikin an efficient cross-cultural measurement of emotional response},
+  author={Morris, Jon D},
+  journal={Journal of advertising research},
+  volume={35},
+  number={6},
+  pages={63--68},
+  year={1995}
+}
+@article{bradley1993affective,
+  title={Affective picture processing},
+  author={Bradley, Margaret M and Greenwald, Mark K and Hamm, Alfons O},
+  journal={The structure of emotion: Psychophysiological, cognitive, and clinical aspects},
+  pages={48--65},
+  year={1993},
+  publisher={Hogrefe y Huber Publishers. Toronto}
+}
+@article{depaula2005cognitive,
+  title={Cognitive and cultural views of emotions},
+  author={DePaula, Rog{\'e}rio and Dourish, Paul},
+  journal={Proc. HCIC},
+  year={2005}
+}
+@book{pise2011thinkquest,
+  title={ThinkQuest 2010: Proceedings of the First International Conference on Contours of Computing Technology},
+  author={Pise, SJ},
+  year={2011},
+  publisher={Springer}
+}
+@incollection{tijs2009creating,
+  title={Creating an emotionally adaptive game},
+  author={Tijs, Tim and Brokken, Dirk and IJsselsteijn, Wijnand},
+  booktitle={Entertainment Computing-ICEC 2008},
+  pages={122--133},
+  year={2009},
+  publisher={Springer}
+}
+@article{yannakakis2007towards,
+  title={Towards optimizing entertainment in computer games},
+  author={Yannakakis, Georgios N and Hallam, John},
+  journal={Applied Artificial Intelligence},
+  volume={21},
+  number={10},
+  pages={933--971},
+  year={2007},
+  publisher={Taylor \& Francis}
+}
+@inproceedings{aggag2011affective,
+  title={Affective gaming: a GSR based approach},
+  author={Aggag, Ahmed and Revett, Kenneth},
+  booktitle={Proceedings of the 15th WSEAS international conference on Computers},
+  pages={262--266},
+  year={2011},
+  organization={World Scientific and Engineering Academy and Society (WSEAS)}
+}
+@inproceedings{sykes2003affective,
+  title={Affective gaming: measuring emotion through the gamepad},
+  author={Sykes, Jonathan and Brown, Simon},
+  booktitle={CHI'03 extended abstracts on Human factors in computing systems},
+  pages={732--733},
+  year={2003},
+  organization={ACM}
+}
+@book{clynes1977sentics,
+  title={Sentics: The touch of emotions},
+  author={Clynes, Manfred},
+  year={1977},
+  publisher={Anchor Press Garden City, NY}
+}
+@incollection{saari2009emotionally,
+  title={Emotionally Adapted Games--An Example of a First Person Shooter},
+  author={Saari, Timo and Turpeinen, Marko and Kuikkaniemi, Kai and Kosunen, Ilkka and Ravaja, Niklas},
+  booktitle={Human-Computer Interaction. Interacting in Various Application Domains},
+  pages={406--415},
+  year={2009},
+  publisher={Springer}
+}
