working on chp-3

--- a/thesis/content/bibliography.bib
+++ b/thesis/content/bibliography.bib
@@ -194,14 +194,6 @@
   pages={493--502},
   year={1989}
 }
-@inproceedings{sykes2003affective,
-  title={Affective gaming: measuring emotion through the gamepad},
-  author={Sykes, Jonathan and Brown, Simon},
-  booktitle={CHI'03 extended abstracts on Human factors in computing systems},
-  pages={732--733},
-  year={2003},
-  organization={ACM}
-}
 @inproceedings{zagalo2004story,
   title={Story reaction structures to emotion detection},
   author={Zagalo, Nelson and Barker, Anthony and Branco, Vasco},
@@ -507,4 +499,76 @@
   pages={406--415},
   year={2009},
   publisher={Springer}
+}
+@article{rollings2006fundamentals,
+  title={Fundamentals of game design},
+  author={Rollings, Andrew and Adams, Ernest},
+  journal={New Challenges for Character-Based AI for Games. Chapter 20: Artificial Life and Puzzle Games. Prentice Hall},
+  pages={573--590},
+  year={2006}
+}
+@book{malone1982makes,
+  title={What makes computer games fun?},
+  author={Malone, Thomas},
+  volume={13},
+  number={2-3},
+  year={1982},
+  publisher={ACM}
+}
+@book{salen2004rules,
+  title={Rules of play: Game design fundamentals},
+  author={Salen, Katie and Zimmerman, Eric},
+  year={2004},
+  publisher={MIT press}
+}
+@misc{pajares2008understanding,
+  title={Understanding Video Games: the essential introduction},
+  author={Pajares Tosca, Susana and EGENFELDT-NIELSON, Simon and HEIDE SMITH, Jonas},
+  year={2008},
+  publisher={Editorial Routledge, Oxford}
+}
+@book{laramee2002game,
+  title={Game design perspectives},
+  author={Laram{\'e}e, Fran{\c{c}}ois Dominic},
+  year={2002},
+  publisher={Cengage Learning}
+}
+@book{rollings2003andrew,
+  title={Andrew Rollings and Ernest Adams on game design},
+  author={Rollings, Andrew and Adams, Ernest},
+  year={2003},
+  publisher={New Riders}
+}
+@book{koster2013theory,
+  title={Theory of fun for game design},
+  author={Koster, Raph},
+  year={2013},
+  publisher={" O'Reilly Media, Inc."}
+}
+@book{csikszentmihalyi1990flow,
+  title={Flow: The Psychology of Optimal Experience},
+  author={Csikszentmihalyi, M.},
+  isbn={9780060162535},
+  lccn={89045645},
+  url={http://books.google.ca/books?id=V9KrQgAACAAJ},
+  year={1990},
+  publisher={Harper \& Row}
+}
+@incollection{sundstrom2005user,
+  title={A user-centered approach to affective interaction},
+  author={Sundstr{\"o}m, Petra and St{\aa}hl, Anna and H{\"o}{\"o}k, Kristina},
+  booktitle={Affective Computing and Intelligent Interaction},
+  pages={931--938},
+  year={2005},
+  publisher={Springer}
+}
+@article{chen2007flow,
+  title={Flow in games (and everything else)},
+  author={Chen, Jenova},
+  journal={Communications of the ACM},
+  volume={50},
+  number={4},
+  pages={31--34},
+  year={2007},
+  publisher={ACM}
 }
