--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -7,6 +7,7 @@
 \usepackage{ctable}
 \usepackage{array}
 \usepackage{svg}
+\usepackage{wallpaper}
 
 %------------------------------------------------------------------------------
 
@@ -90,16 +91,15 @@ S7N 5C9
 \chapter{Transforming physiological variables into arousal-valence space} \label{app:phys-to-av}    \input{content/app-phys-to-av.tex}
 \chapter{Transforming physiological variables into arousal-valence space} \label{app:phys-to-av}    \input{content/app-phys-to-av.tex}
 \chapter{Transforming arousal-valence space into emotional states}        \label{app:av-to-emotion} \input{content/app-av-to-emotion.tex}
-\chapter{Consent Form}                                                    \label{app:consent}       \noindent\makebox[\textwidth][c]{\includegraphics[width=1.0\textwidth]{content/app-consent-form.pdf}}
-\chapter{Demographics Questionnaire}                                      \label{app:q-dmg}         \noindent\makebox[\textwidth][c]{\includegraphics[width=1.1\textwidth,pages={1}]{content/app-q-dmg.pdf}}
-                                                                                                    \noindent\makebox[\textwidth][c]{\includegraphics[width=1.1\textwidth,page=2]{content/app-q-dmg.pdf}}
-                                                                                                    \noindent\makebox[\textwidth][c]{\includegraphics[width=1.1\textwidth,page=2]{content/app-q-dmg.pdf}}
-                                                                                                    \noindent\makebox[\textwidth][c]{\includegraphics[width=1.1\textwidth,page=3]{content/app-q-dmg.pdf}}
-\chapter{Condition Questionnaire}                                         \label{app:q-cnd}         \noindent\makebox[\textwidth][c]{\includegraphics[width=1.1\textwidth,page=1]{content/app-q-cnd.pdf}}
-\chapter{Self-Assessment-Manikin Arousal Scales Questionnaire}            \label{app:q-sam}         \noindent\makebox[\textwidth][c]{\includegraphics[width=1.1\textwidth,page=1]{content/app-q-sam.pdf}}
-\chapter{Intrinsic Motivation Inventory Questionnaire}                    \label{app:q-ini}         \noindent\makebox[\textwidth][c]{\includegraphics[width=1.1\textwidth,page=1]{content/app-q-imi.pdf}}
-\chapter{Player Experience of Need Satisfaction Questionnaire}            \label{app:q-pens}        \noindent\makebox[\textwidth][c]{\includegraphics[width=1.1\textwidth,page=1]{content/app-q-pens.pdf}}
-\chapter{Game Engagement Questionnaire}                                   \label{app:q-geq}         \noindent\makebox[\textwidth][c]{\includegraphics[width=1.1\textwidth,page=1]{content/app-q-geq.pdf}}
+\chapter{Consent Form}                                                    \label{app:consent}       \addtolength{\wpYoffset}{-1.6cm}\ThisCenterWallPaper{0.85}{content/app-consent-form.pdf}
+\chapter{Demographics Questionnaire}                                      \label{app:q-dmg}         \noindent\makebox[\textwidth][c]{\includegraphics[page=1,width=\textwidth,height=\textheight,keepaspectratio]{content/app-q-dmg.pdf}}\newpage
+                                                                                                    \noindent\makebox[\textwidth][c]{\includegraphics[page=2,width=\textwidth,height=\textheight,keepaspectratio]{content/app-q-dmg.pdf}}\newpage
+                                                                                                    \noindent\makebox[\textwidth][c]{\includegraphics[page=3,width=\textwidth,height=\textheight,keepaspectratio]{content/app-q-dmg.pdf}}
+\chapter{Condition Questionnaire}                                         \label{app:q-cnd}         \noindent\makebox[\textwidth][c]{\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{content/app-q-cnd.pdf}}
+\chapter{Self-Assessment-Manikin Arousal Scales Questionnaire}            \label{app:q-sam}         \noindent\makebox[\textwidth][c]{\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{content/app-q-sam.pdf}}
+\chapter{Intrinsic Motivation Inventory Questionnaire}                    \label{app:q-ini}         \noindent\makebox[\textwidth][c]{\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{content/app-q-imi.pdf}}
+\chapter{Player Experience of Need Satisfaction Questionnaire}            \label{app:q-pens}        \noindent\makebox[\textwidth][c]{\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{content/app-q-pens.pdf}}
+\chapter{Game Engagement Questionnaire}                                   \label{app:q-geq}         \noindent\makebox[\textwidth][c]{\includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{content/app-q-geq.pdf}}
 
 %------------------------------------------------------------------------------
 
