--- a/thesis/content/chp-3-video-games.tex
+++ b/thesis/content/chp-3-video-games.tex
@@ -1,57 +1,93 @@
 % 10 to 15 pages
-% - talk about various game design elements, player, npcs and environment
-% and their connection to the play experience
 
-\section{The Concept of Flow in Video Games}
+Playing video games as a kind of entertainment would help people to have new internal experiences. The virtual world of video games let adults to play as new rolls and enjoy filling their heads with new thoughts and emotions. Games are opportunities for development and design of environments therefore the player can interactively experience various emotions and mental conditions. This interactive experience in contrast to cinema and other major types of entertainment is what makes them exceptional
 
-% TODO:paraphrase (Flow in Games - And Everything Else.pdf)
-p In the mid-1970s, in an attempt to explain hap- piness, Mihaly Csikszentmihalyi, a professor of psy- chology at the Claremont Graduate University, Claremont, CA, introduced the concept of Flow, which has since become fundamental to the field of positive psychology, including the study, according to Wikipedia, of “happiness, creativity, subjective well-being, and fun.” Flow represents the feeling of complete and energized focus in an activity, with a high level of enjoyment and fulfillment [2]. During the Flow experience, we lose track of time and worries. Indeed, our level of focus maximizes our performance in and pleasurable feelings from the activity.Flow is also called the optimal experi- ence, or being in “the Zone.” Though often associ- ated with professional athletes and artists, it is a feeling shared by every human being. Recall being so engaged in something that you forget to eat or sleep. What made you feel that way? Csikszentmihalyi’s research and personal observa- tions identified eight major components of Flow: 
- A challenging activity requiring skill;
- A merging of action and awareness;
- Clear goals;
- Direct, immediate feedback;
- Concentration on the task at hand; 
- A sense of control;
- A loss of self-consciousness; and
- An altered sense of time. 
+In computer games, gameplay is usually considered of key importance ~\cite{rollings2006fundamentals, malone1982makes}. One can define gameplay as the pattern defined through the game rules ~\cite{salen2004rules, pajares2008understanding} connection between player and the game ~\cite{laramee2002game} or challenges ~\cite{rollings2003andrew} of the game. Gameplay is not a singular entity, it can consist of many different elements. In fact it is the result of a large number of contributing elements. Gameplay is essentially a synergy that emerges from the inclusion of certain factors ~\cite{rollings2003andrew}. In absence of a broadly accepted definition for gameplay, our focus here is targeted on one frequently mentioned element of it which is \textit{challenge}. The sense of challenge in video games is what keeps many people playing them. However this challenge element of the gameplay should be carefully adjusted for the targeted audience. The process of adjusting the challenge level of the game is usually referred to as game balancing. To balance the challenge level or difficulty scale of the game, designers change many interacting parameters to create a gameplay somewhere between too easy to be boring and too hard to be frustrating ~\cite{koster2013theory}. In this chapter, a history of related works investigating the relation between a game's difficulty level and various emotional states is provided.
 
-p Not all of them are needed, however, for an activity or technology to give users the experience of Flow [1]. Does your work or hobby reflect them? Do you have fun doing it? Flow can emerge from any kind of activity, whether it’s a five-minute pinball game or a 10-year research project. A life that would be con- sidered happy is usually bundled with various long- and short-term Flow experiences, from career and family to daily entertainment like TV, movies, and video games. 
+\section{Gameplay and The Concept of Flow}
 
-\img
-{Flow in Games}
-{flow ...}
-{flow-in-games.pdf}
-{flow-in-games}
-% TODO:paraphrase (Flow in Games - And Everything Else.pdf)
+Mihaly Csikszentmihalyi, in the mid 70s, in an attempt to explain happiness, introduced the concept of \textit{flow}. His work as a professor of psychology has become fundamental to the field of positive psychology that essentially includes happiness, creativity, subjective well-being and fun ~\cite{csikszentmihalyi1990flow}. The feeling of complete and energized focus while engaged in an activity is what usually referred to as flow, this feeling also has an ambient sense of enjoyment and fulfillment ~\cite{csikszentmihalyi1990flow}. During the flow experience our high level of focus maximizes our performance and we essentially lose track of time and worries, rather we feel a pleasurable feeling from the activity. Flow is also referred to as the optimal experience or being in \textit{the zone}. This feeling is shared by every human being, and most probably has happened to one when he or she forgets to eat or sleep being so engaged in an activity.
 
-\subsection{Challenge vs. Skill}
+Csikszentmihalyi in his work, identified eight major components of flow ~\cite{csikszentmihalyi1990flow}:
+
+\begin{itemize}
+\item A challenging activity requiring skill;
+\item A merging of action and awareness;
+\item Clear goals;
+\item Direct, immediate feedback;
+\item Concentration on the task at hand; 
+\item A sense of control;
+\item A loss of self-consciousness; and
+\item An altered sense of time. 
+\end{itemize}
+
+From the above items, an activity doesn't necessarily require all the eight components to inspire the flow experience. In fact as far as we are concerned with gameplay in video games, the first item which relates to the challenge and the skill level is what we should pay attention to. Figure ~\ref{fig:challenge-vs-skill} shows Csikszentmihalyi's flow model in terms of challenge and skill level.
 
 \img
-{Russell's arousal and valence model}
+{Challenge and skill level}
 {Mental state in terms of challenge level and skill level, according to Csikszentmihalyi's flow model ~\cite{csikszentmihalyi1997finding}}
-{challenge-vs-skill.png}
+{challenge-vs-skill.pdf}
 {challenge-vs-skill}
 
+Flow zone is an inspiring concept in flow theory and is illustrated in figure ~\ref{fig:flow-zone}. What flow zone suggests, in order to sustain players' flow experience, is to balance the inherent challenge of the activity and the required player's ability (skills) to address and overcome it ~\cite{chen2007flow}. It avoids the activity to become so overwhelming by a challenge beyond player's ability and consequently generating anxiety; Also avoids failing to engage the player and become so boring due to a challenge level less than player's ability. However, this should be mentioned, we fortunately have tolerance for a temporary lack of stimulation, with an assumption of more is on the way. One should consider the flow zone as a fuzzy safe zone where the activity is not yet too challenging or boring ~\cite{csikszentmihalyi1990flow}.
 
-\section{Different Mechanisms in Game Balancing}
+\img
+{Flow zone}
+{Flow zone}
+{flow-zone.pdf}
+{flow-zone}
 
-%% TODO:paraphrase (olesen2008real)
+As far as the content and premise of the activity is inherently appealing to the audience, the design of the interactive experience, such as video games, boils down to keeping the user or the player in the flow zone throughout the activity. While playing a video game gradually increases player's skill level, the designer should increase the required skill level by changing the challenge level of the game at the same pace to keep the player in the flow zone. Though this gradual acquiring of skills happens differently in different individuals. In fact designing such a balance between the challenge and skill level becomes a greater and greater challenge for the designer as the size of the targeted audience grows. For example when designing a game for kids, this balance would have a wholly different rate of change than when designing it for adults; And therefor balancing a game targeting both kids and adults using the preset static methods looks impossible.
+
+%Flow in Games - And Everything Else.pdf
+p Concerning video games, different players have different skills and expect different challenges. Most games offer only a single narrow, static experience (the red line in Figure 2). It might keep the typical player in the Flow but will not be fun for the hard- core or even the novice player. For example, a simple action (such as moving a camera in a 3D space) might be frustrating for a casual gamer who has never played a 3D game. Even though the rest of the game might be something casual gamers enjoy in other 2D games, the frus- trating beginning is likely to turn them away. 
+
+\img
+{Adapted flow zone}
+{Adapted flow zone}
+{flow-zone-adapted.pdf}
+{adapted-flow-zone}
+
+%olesen2008real
 p Computer game balance (or difficulty adjustment) is a crucial aspect of commercial game development. Currently, this is achieved either by predefined levels of game challenge — the player then decides which of those levels she will play against — or by techniques known as rubber-band artificial intelligence (AI) [1], mainly used in racing games. The first approach cannot incorporate the needs of all potential players of the game while the latter approach generates predictable behaviors which reduce the believability of the non-player characters (NPCs). Furthermore, human players enhance their skills while playing a game which necessitates an adaptive mechanism that covers the player’s need for more challenging NPCs during play (i.e. in real-time).
-%% TODO:paraphrase (olesen2008real)
 
-%%TODO:paraphrase(Time Balancing of Computer Games with Adaptive Time-Variant Minigames)
-p A game balancing approach can be considered from two different aspects: the degree of adaptability of the overall approach of game balancing and actual game balancing algorithms employed to achieve the approach. Static game balancing and dynamic game balancing are the two primary approaches for the adaptability, which are considered here. Many game balancing algorithms are possible once an approach has been determined, and key implementations are discussed here.  
+\img
+{Call of Duty, non-adaptive difficulty modes}
+{Menu content for difficulty selection, Call of Duty: World at War (Wii)}
+{cod-mw-difficulty.png}
+{cod-mw-difficulty}
 
+%Time Balancing of Computer Games with Adaptive Time-Variant Minigames
+\subsection{Game Balancing using Artificial Intelligence}
+p High quality game AI has become an important selling point of computer games in recent years [40]. However, game players often still prefer to play against human controlled opponents (via a network) rather than computer controlled ones [41]. Olesen has explored neuro-evolution methodologies to generate intelligent opponents in Real-Time Strategy (RTS) games and tried to adapt the challenge generated by the game opponents to match the skill of a player in real-time [42]. Several previous approaches focused on the game’s AI and probabilistic methods to address dynamic balancing. In Knock’Em [43], reinforcement learning techniques has been employed to build intelligent agents that adapt their behavior in order to provide dynamic game balancing. Hunicke [26] has explored a computational and design requirements for a dynamic difficulty adjustment system using probabilistic methods based on Half Life game engine [44]. 
+
+% Dynamic Difﬁculty Adjustment by Facial Expression.pdf
+p The other methods are to utilize game AI to dynamically adjust the difﬁculty level. Gaussian Mixture Module and multivariate pattern mining were used to model the player’s reaction pattern [21, 22]. NPCs behaviors are controlled by reinforce learning algorithm [6, 7]. They did not, however, change the game environment or adjust the difﬁculty of the game level during play. By conducting a cheap, abstract simulation of the player’s progression through state space, Hunicke [4] used Hamlet system to predict when the player is repeatedly entering an undesirable loop, and help them get out of it. Joost [23] proposed an adaptation approach that uses expert knowledge for the adaptation. They used a game adaption model and organized agents to choose the most optimal task for the trainee, given the user model, the game ﬂow and the capabilities of the agents. Hom [24] used AI techniques to design balanced board games like checkers and Go by modifying the rules of the game, not just the rule parameters.
+
+\section{Emotionally Adaptive Games}
+
+While adjusting the challenge level is crucial to every entertaining video game the appealing gameplay might strongly differ per individual. For example skill level differences between different players might make a difficulty level which is enjoyable by a novice, totally boring for an expert player.
+
+% Creating an Emotionally Adaptive Game.pdf
+p These relations strongly differ per individual, for example influenced by a player's skill level. For instance, a difficulty level that is found enjoyable by a novice might be boring for expert players. Games therefore need psychological customization techniques [4], such as difficulty adaptation, to optimize the experience. Since many years, game designers aim to provide some customization, for example by letting players choose a difficulty level upfront or including progressive difficulty levels during gameplay, based on a player's performance. More advanced methods that work in real-time are less common. One difficulty adaptation mechanism, frequently applied in racing games, is called rubber banding [5]: When falling behind, the player suddenly gets an enormous boost in speed, which allows for catching up again (and vice versa for the competing cars). However, game adaptation that is solely based on in-game behavior can only have limited success, because there are many different types of players [6]. Each type of player has his/her own goals, preferences and emotional responses when playing a game. Hence, for optimizing the players' experiences, successful psychological customization requires a game to take the emotional state of the player into account. Games should become emotionally adaptive (Fig. 1– right panel).
+
+\img
+{Emotionally adaptive games}
+{The emotionally adaptive game loop, inspired on the affective loop ~\cite{sundstrom2005user}.}
+{affective-game-system.pdf}
+{affective-game-system}
+
+% Creating an Emotionally Adaptive Game.pdf
+p The importance of emotions in computing is widely argued for (e.g. [8]). Emotion theorists differ over a discrete versus a dimensional model. The \"discretionists\" (e.g. [9]) argue for basic discrete emotions, such as anger, fear, sadness and happiness, as unique experiential states. The \"dimensionalists\" (e.g. [10]), on the other hand, look at emotions in terms of a two-dimensional space consisting of valence ("pleasantness") and arousal ("activation"). Sometimes dominance is added as a third dimension.  Effective human-computer interaction from an emotions perspective works in terms of an \"affective loop\" [7]. A similar feedback loop in a games context is described by [11]. Inspired by their work, Fig. 1 (right panel) shows a schematic view on the functioning of an emotionally adaptive game. By providing the right game mechanics [12] (e.g. audiovisuals, narrative, challenge), the game influences the player's experience, behavior and emotional state. Ideally, during play, the emotional state of the player (measured in terms of emotion-data), is continuously being fed back to the game so that the game can adapt its mechanics (e.g. difficulty level)
+accordingly in real-time. This all is done to create the optimal experience (which is referred to in literature as e.g. flow [13] or immersion [14]). Previous research attempts to create emotionally adaptive software have mainly focused on tutoring systems and workload / performance optimization (see e.g. [15]). Fewer attempts have been made to incorporate a closed-loop mechanism in a games context. Takahashi et al. [16] and Rani et al. [17] created a game that was found to improve player performance by adapting difficulty level to player's physiological state. Concept validation claims of these both studies were, however, based on a limited number of participants. Besides these attempts, a number of biofeedback games have recently been developed, which have some integration of a player's physiological data into the game (e.g. [18], [19] and [20]). These games however focus on stress manipulation rather than optimization of gameplay experience. Probably closest to the present project's scope is the work of Saari and colleagues, who created the Mind-Based Technology framework for psychological customization [21]. They have further elaborated this in a games context (e.g. [4], [22]) and are currently developing an emotionally adaptive game demo. As a first step in creating an emotionally adaptive game, system input and output need to be specified in further detail. Regarding output (emotion-data), Saari et al. [22] provide an extensive discussion of possible elements to be adapted, structured by \"psychologically validated templates\". We have adopted a rather straightforward and intuitive \"template\": Game speed. We will manipulate the game's speed to influence the player's emotional state (the interplay between boredom, frustration and enjoyment, Fig. 1-left panel). Regarding system input (emotion-data), Öhman [23] distinguished three categories of emotion measures: Self-reports, overt behavior and physiological responses. Self-reports are frequently used for assessing players' emotions and experiences [5] but not suitable (since too obtrusive) for real-time application in a game. Regarding overt behavior, potentially useful techniques for measuring boredom, frustration and enjoyment are facial emotion tracking [24] and the analysis of posture and pressure exerted on the game controls [25]. Regarding physiological responses, there is an extensive field with many research findings in psychophysiology. Although the research is done in varying contexts with sometimes contradicting results, it is considered a highly interesting field for analyzing emotions in games. We have limited ourselves to the methods described below. Regarding cardiovascular (heart) activity, tonic (long-term, as opposed to phasic) heart rate (HR) is known to increase with sympathetic nervous system activity, such as emotional arousal and cognitive effort and stress. On the other hand, increases in attention (mediated in the parasympathetic nervous system) lead to a decreased heart rate [26]. [27] found HR features to correlate with self-reported fun in games. Heart rate variability (HRV) is considered an index for mental effort (e.g. [28]). Some researchers (e.g. [29]) consider the percentage power in the low-frequency (LF) 0.070.14 Hz range as a particularly effective index for task-related mental effort / sympathetic activity. Respiratory responses are analyzed to control for respiratory artifacts in e.g. HRV (a phenomenon known as respiratory sinus arrhythmia). Respiration may, however, also be used as a measure itself, e.g. for investigating stress and mental load [30]. Electrodermal activity (EDA) concerns the electrical resistance of the skin, also known as Skin Conductance (SCL, SCR) or Galvanic Skin Response (GSR). Skin conductance level is known to increase with information processing and the frequency of non-specific skin responses increases with arousal [26]. Electromyography (EMG) is a technique for measuring muscle activity; electric potential is being generated when muscle cells contract. Facial EMG is frequently used as a metric for valence. The most frequently analyzed facial muscles in this context are the orbicularis oculi (OO, used for closing the eyelids), zygomaticus major (ZYG, smiling) and corrugator supercilii (CORR, frowning). Most studies find positive correlations between valence and the OO and ZYG muscles, and a negative correlation between valence and CORR muscle (see e.g. [31], [32], [33]). In addition to the above findings, there are also a considerable number of studies without significant findings [34]. Because of the large differences in physiological responses between individuals and within individuals over time (autonomic response stereotypy principle, see e.g. [15], [35]), some researchers (e.g. [36]) argue for normalizing physiological data to facilitate a group analysis of the data. Additionally, affective systems should employ a battery of physiological features for accurate emotion predictions (e.g. [37]), and should allow for user-control for the sake of autonomy, privacy and interpretation of the data [41]. Because of the context-dependency of physiological responses, a two-stage approach was adopted. The purpose of the current initial study is to investigate physiological and other affect-related responses in relation to an experimentally induced change in game mechanics. Note that in this study the affective loop is not yet closed, that is, real-time affective indicators are not yet directly influencing the game mechanics. This will be the purpose of phase 2 of our work. The research question for the current invesigation evolved around the components of our framework (Fig. 1 - right panel): What game mechanics (speed settings) lead to what kind of emotional state, and what emotion-data is this accompanied by? This was investigated by means of a controlled experiment, as explained in the next section.
+% Creating an Emotionally Adaptive Game.pdf
+
+
+%Time Balancing of Computer Games with Adaptive Time-Variant Minigames
 \subsection{Dynamic Game Balancing vs. Static Game Balancing }
 p A primary issue in competitive games is that the different teams or players should have equal chances to win the game based on rules and starting positions [20]. Balancing fairness can involve manipulations of different game elements – for example, the capabilities and initial resources allocated to player types such as Orcs and Humans in WarCraft [12]. This type of balancing (called ‘static balancing’) is often carried out through repeated playtesting of the game mechanics and parameters [34], such as tuning the capabilities of individual weapons or units [20].  The idea of balancing a game dynamically during game play is not new [36]. Dynamic balancing, considers a fully continuous spectrum of play, from the starting point of the game to its end. Dynamic balancing differs from static balancing because the interaction of the player or players with the game should be considered, and different units and parameters in the game configuration should be adapted based on the current state of the game [37] rather than at the start of play based on player models. Variable frequency of enemies in Diablo 3 and variable power of enemies in Assassin’s Creed 4: Black Flag [38] are examples of dynamic balancing during game play. 
 
 
-\subsection{Game Balancing using Artificial Intelligence}
-p High quality game AI has become an important selling point of computer games in recent years [40]. However, game players often still prefer to play against human controlled opponents (via a network) rather than computer controlled ones [41]. Olesen has explored neuro-evolution methodologies to generate intelligent opponents in Real-Time Strategy (RTS) games and tried to adapt the challenge generated by the game opponents to match the skill of a player in real-time [42]. Several previous approaches focused on the game’s AI and probabilistic methods to address dynamic balancing. In Knock’Em [43], reinforcement learning techniques has been employed to build intelligent agents that adapt their behavior in order to provide dynamic game balancing. Hunicke [26] has explored a computational and design requirements for a dynamic difficulty adjustment system using probabilistic methods based on Half Life game engine [44]. 
-%%TODO:paraphrase(Time Balancing of Computer Games with Adaptive Time-Variant Minigames)
-
-% Dynamic Difﬁculty Adjustment by Facial Expression.pdf
-p The other methods are to utilize game AI to dynamically adjust the difﬁculty level. Gaussian Mixture Module and multivariate pattern mining were used to model the player’s reaction pattern [21, 22]. NPCs behaviors are controlled by reinforce learning algorithm [6, 7]. They did not, however, change the game environment or adjust the difﬁculty of the game level during play. By conducting a cheap, abstract simulation of the player’s progression through state space, Hunicke [4] used Hamlet system to predict when the player is repeatedly entering an undesirable loop, and help them get out of it. Joost [23] proposed an adaptation approach that uses expert knowledge for the adaptation. They used a game adaption model and organized agents to choose the most optimal task for the trainee, given the user model, the game ﬂow and the capabilities of the agents. Hom [24] used AI techniques to design balanced board games like checkers and Go by modifying the rules of the game, not just the rule parameters.
 
 
 \section{Emotionally Adaptive Games}
@@ -63,6 +99,11 @@ p The other methods are to utilize game AI to dynamically adjust the difﬁculty
 %%% adapting play technologies by changing Player, NPC, Environment parameters.
 %%% getting challenged and physiological signals, the importance of GSR
 
+%% TODO:paraphrase
+p The Affective Gaming concept was first introduced by Wehrenberg, Charles through using Biofeedback to control a game based on relaxation level, it was the earliest research for correlating a game with biofeedback and after years of research the project was first implemented in 1984 for apple II computers, and the test results proved that human arousal level can actually be measured through GSR and used to control a game  ~\cite{wehrenberg1995willball}.
+%% TODO:paraphrase
+
+
 % Emotionally Adapted Games - An Example of a First Person Shooter.pdf
 p Emotionally adapted gaming can be seen as based on gaming templates which are parts of the meta-narrative of the game. Hence, a basic approach to an element to be adapted inside a game is a psychologically validated template which creates a particular psychological effect. A broad view of templates may be that the whole game consists of a database of psychologically validated templates that are dynamically presented by the gaming engine in sequences during gameplay. A limited view entails that a smaller collection of templates is used. The element of psychological evaluation means that the selected psychological influence (such an emotional response) of the template on a particular type of user is sufficiently predictable. These psychologically evaluated templates may consist of i) manipulating 
 
@@ -71,42 +112,6 @@ p the substance of a game, such as story line (initiating events, new characters
 
 % Emotionally Adapted Games - An Example of a First Person Shooter.pdf
 p Fourth, it is also possible to create different combinations of emotional states (satisfied and angry) or emotional states and other psychological states (pleasant relaxation and efficient information processing) or emotional states and behavior (using specific motivational and action tendencies). [3]  All of these possibilities may be relevant. However, the elimination or minimization of certain emotions may be specifically feasible in the case of indicated overly poor gaming experience in which the game may adapt its behavior to assist the user. It should be noted that events in games may change quickly and produce complex situations and hence complex emotions that may change rapidly. Consequently, one should better integrate these approaches into the genre or type of the game, such as driving simulator, first person shooter, sports game such as golf, or an adventure game, or a level-playing game for children. [14] 
-
-% Creating an Emotionally Adaptive Game.pdf
-p For creating entertaining computer games1, gameplay is considered to be of key importance ([1], [2]). In absence of a broadly accepted definition of gameplay, we focus here on one frequently mentioned element of it, which is challenge. The process of optimizing a game’s challenge is referred to as game balancing or difficulty scaling. That is, changing parameters in order to avoid that the player gets frustrated because the game is too hard, or gets bored because the game is too easy [3]. In this study, we have investigated the relations between a game's difficulty level and the interplay between the emotions boredom, frustration and enjoyment (Fig. 1-left panel). These 
-relations strongly differ per individual, for example influenced by a player's skill level. For instance, a difficulty level that is found enjoyable by a novice might be boring for expert players. Games therefore need psychological customization tech- niques [4], such as difficulty adaptation, to optimize the experience. Since many years, game designers aim to provide some customization, for example by letting players choose a difficulty level upfront or including progressive difficulty levels during gameplay, based on a player’s performance.   More advanced methods that work in real-time are less common. One difficulty adaptation mechanism, frequently applied in racing games, is called rubber banding [5]: When falling behind, the player suddenly gets an enormous boost in speed, which allows for catching up again (and vice versa for the competing cars). However, game adaptation that is solely based on in-game behavior can only have limited success, because there are many different types of players [6]. Each type of player has his/her own goals, preferences and emotional responses when playing a game. Hence, for optimizing the players' experiences, successful psychological customization requires a game to take the emotional state of the player into account. Games should become emotionally adaptive (Fig. 1– right panel). 
-
-\img
-{Emotionally adaptive games}
-{Left panel: Game balancing (Adapted from [1]). Right panel: The emotionally adaptive games loop, inspired on the affective loop [7]. }
-{adaptive-games.png}
-{adaptive-games}
-
-% Creating an Emotionally Adaptive Game.pdf
-p The importance of emotions in computing is widely argued for (e.g. [8]). Emotion theorists differ over a discrete versus a dimensional model. The \"discretionists\" (e.g. [9]) argue for basic discrete emotions, such as anger, fear, sadness and happiness, as unique experiential states. The \"dimensionalists\" (e.g. [10]), on the other hand, look at emotions in terms of a two-dimensional space consisting of valence ("pleasantness") and arousal ("activation"). Sometimes dominance is added as a third dimension.  Effective human-computer interaction from an emotions perspective works in terms of an \"affective loop\" [7]. A similar feedback loop in a games context is de- scribed by [11]. Inspired by their work, Fig. 1 (right panel) shows a schematic view on the functioning of an emotionally adaptive game. By providing the right game mechanics [12] (e.g. audiovisuals, narrative, challenge), the game influences the player's experience, behavior and emotional state. Ideally, during play, the emotional state of the player (measured in terms of emotion-data), is continuously being fed back to the game so that the game can adapt its mechanics (e.g. difficulty level)
-accordingly in real-time. This all is done to create the optimal experience (which is referred to in literature as e.g. flow [13] or immersion [14]). Previous research at- tempts to create emotionally adaptive software have mainly focused on tutoring sys- tems and workload / performance optimization (see e.g. [15]). Fewer attempts have been made to incorporate a closed-loop mechanism in a games context. Takahashi et al. [16] and Rani et al. [17] created a game that was found to improve player perform- ance by adapting difficulty level to player's physiological state. Concept validation claims of these both studies were, however, based on a limited number of participants. Besides these attempts, a number of biofeedback games have recently been devel- oped, which have some integration of a player's physiological data into the game (e.g. [18], [19] and [20]). These games however focus on stress manipulation rather than optimization of gameplay experience. Probably closest to the present project's scope is the work of Saari and colleagues, who created the Mind-Based Technology frame- work for psychological customization [21]. They have further elaborated this in a games context (e.g. [4], [22]) and are currently developing an emotionally adaptive game demo. As a first step in creating an emotionally adaptive game, system input and output need to be specified in further detail. Regarding output (emotion-data), Saari et al. [22] provide an extensive discussion of possible elements to be adapted, structured by \"psychologically validated templates\". We have adopted a rather straightforward and intuitive \"template\": Game speed. We will manipulate the game's speed to influence the player's emotional state (the interplay between boredom, frustration and enjoy- ment, Fig. 1-left panel). Regarding system input (emotion-data), Öhman [23] distin- guished three categories of emotion measures: Self-reports, overt behavior and physiological responses. Self-reports are frequently used for assessing players' emo- tions and experiences [5] but not suitable (since too obtrusive) for real-time application in a game. Regarding overt behavior, potentially useful techniques for measuring boredom, frustration and enjoyment are facial emotion tracking [24] and the analysis of posture and pressure exerted on the game controls [25]. Regarding physiological responses, there is an extensive field with many research findings in psychophysiology. Although the research is done in varying contexts with sometimes contradicting results, it is considered a highly interesting field for analyzing emotions in games. We have limited ourselves to the methods described below. Regarding cardiovascular (heart) activity, tonic (long-term, as opposed to phasic) heart rate (HR) is known to increase with sympathetic nervous system activity, such as emotional arousal and cognitive effort and stress. On the other hand, increases in attention (mediated in the parasympathetic nervous system) lead to a decreased heart rate [26]. [27] found HR features to correlate with self-reported fun in games. Heart rate variability (HRV) is considered an index for mental effort (e.g. [28]). Some researchers (e.g. [29]) consider the percentage power in the low-frequency (LF) 0.070.14 Hz range as a particularly effective index for task-related mental effort / sympathetic activity. Respiratory responses are analyzed to control for respiratory artifacts in e.g. HRV (a phenomenon known as respiratory sinus arrhythmia). Respiration may, however, also be used as a measure itself, e.g. for investigating stress and mental load [30]. Electrodermal activity (EDA) concerns the electrical resistance of the skin, also known as Skin Conductance (SCL, SCR) or Galvanic Skin Response (GSR). Skin conductance level is known to increase with information processing and the frequency of non-specific skin responses increases with arousal [26]. Electromyography (EMG) is a technique for measuring muscle activity; electric potential is being generated when muscle cells contract. Facial EMG is frequently used as a metric for valence. The most frequently analyzed facial muscles in this context are the orbicularis oculi (OO, used for closing the eyelids), zygomaticus major (ZYG, smiling) and corrugator supercilii (CORR, frowning). Most studies find positive correlations between valence and the OO and ZYG muscles, and a negative correlation between valence and CORR muscle (see e.g. [31], [32], [33]). In addition to the above findings, there are also a considerable number of studies without significant findings [34]. Because of the large differences in physiological responses between individuals and within individuals over time (autonomic response stereotypy principle, see e.g. [15], [35]), some researchers (e.g. [36]) argue for normalizing physiological data to facilitate a group analysis of the data. Additionally, affective systems should employ a battery of physiological features for accurate emotion predictions (e.g. [37]), and should allow for user-control for the sake of autonomy, privacy and interpretation of the data [41]. Because of the context-dependency of physiological responses, a two-stage approach was adopted. The purpose of the current initial study is to investigate physiological and other affect-related responses in relation to an experimentally induced change in game mechanics. Note that in this study the affective loop is not yet closed, that is, real-time affective indicators are not yet directly influencing the game mechanics. This will be the purpose of phase 2 of our work. The research question for the current invesigation evolved around the components of our framework (Fig. 1- right panel): What game mechanics (speed settings) lead to what kind of emotional state, and what emotion-data is this accompanied by? This was investigated by means of a controlled experiment, as explained in the next section.
-% Creating an Emotionally Adaptive Game.pdf
-
-%% TODO:paraphrase
-p The Affective Gaming concept was first introduced by Wehrenberg, Charles through using Biofeedback to control a game based on relaxation level, it was the earliest research for correlating a game with biofeedback and after years of research the project was first implemented in 1984 for apple II computers, and the test results proved that human arousal level can actually be measured through GSR and used to control a game  ~\cite{wehrenberg1995willball}.
-%% TODO:paraphrase
-
-\img
-{Call of Duty, non-adaptive difficulty modes}
-{Menu content for difficulty selection, Call of Duty: World at War (Wii)}
-{cod-mw-difficulty.png}
-{cod-mw-difficulty}
-
-Playing video games as a kind of entertainment would help people to have new internal
-experiences. The virtual world of video games let adults to play as new rolls and enjoy filling
-their heads with new thoughts and emotions. Some people value
-the sensation
-
-Games are opportunities for development and design of environments therefore
-the player can interactively experience various emotions and mental conditions.
-This interactive experience in contrast to cinema
-and other major types of entertainment is what makes them exceptional
-
 
 \section{Related Work}
 
